--- a/main.css
+++ b/main.css
@@ -17,13 +17,9 @@ font-family: 'Meddon', cursive;
 }
 
 .item img {
-  width: 100%;
   min-height: 80vh;
 }
-.carousel-item .img-fluid {
-  width:100%;
-  height:100%;
-}
+
 
 .carousel-caption .custom-carousel-caption {
   margin-top: 200px !important;
@@ -41,7 +37,6 @@ font-family: 'Meddon', cursive;
                                   supported by Chrome and Opera */
 }
 .carousel {
-
    max-height: 490px;
    overflow: hidden;
 }
@@ -59,6 +54,7 @@ font-family: 'Meddon', cursive;
 .about p{
   text-align: justify;
   font-family: 'Lora', serif;
+  font-size: 15px;
   padding-top: 10px;
   padding-bottom: 40px;
 }
@@ -166,4 +162,12 @@ font-weight: bold;
   font-size: 13.5px;
   color: white;
   font-family: 'Lora', serif;
+}
+@media (max-width: 500px) {
+  .item img {
+  min-height: 175px;
+}
+.carousel {
+  height: 175px;
+}
 }
