--- a/main.css
+++ b/main.css
@@ -170,4 +170,9 @@ font-weight: bold;
 .carousel {
   height: 175px;
 }
+h1 {
+  margin-top: 140px;
+  font-size:25px;
+  margin-bottom: 90px;
+}
 }
